@@ -14,6 +14,7 @@ import io.micrometer.common.lang.NonNull;
 import jakarta.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.authentication.AnonymousAuthenticationToken;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Controller;
@@ -41,6 +42,7 @@ public class SongController {
     @Autowired
     private PlaylistService playlistService;
 
+
     @GetMapping
     public String listSong(Model model) {
         model.addAttribute("songs", songService.getAllSong().stream().filter(s -> !s.isDelete()).toList());
@@ -48,7 +50,12 @@ public class SongController {
         List<Integer> songIds = new ArrayList<>();
         if(!(authentication instanceof AnonymousAuthenticationToken)){
             User user = (User) authentication.getPrincipal();
-                Playlist playlist = playlistService.likePlaylist(user.getUserId(),1);
+            Optional<User> user1 = userService.getUserId(user.getUserId());
+            UsernamePasswordAuthenticationToken newAuthentication = new UsernamePasswordAuthenticationToken(user1.get(), authentication.getCredentials(), user1.get().getAuthorities());
+            SecurityContextHolder.getContext().setAuthentication(newAuthentication);
+
+
+            Playlist playlist = playlistService.likePlaylist(user.getUserId(),1);
 
              songIds = playlist.getSongPlaylist()
                     .stream()
@@ -174,12 +181,28 @@ public class SongController {
 
     @GetMapping("/search")
     public String Search(@NonNull Model model, String query) {
+        model.addAttribute("songs", songService.searchSong(query));
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        List<Integer> songIds = new ArrayList<>();
+        if(!(authentication instanceof AnonymousAuthenticationToken)){
+            User user = (User) authentication.getPrincipal();
 
-        List<Song> songs = songService.getAllSong();
-        model.addAttribute("songs", songs.stream()
-                .filter(title -> title.getSongName().toLowerCase().contains(query.toLowerCase()))
-                .collect(Collectors.toList()));
+            Playlist playlist = playlistService.likePlaylist(user.getUserId(),1);
+
+            songIds = playlist.getSongPlaylist()
+                    .stream()
+                    .map(Song::getSongId)
+                    .toList();
+        }
+
+        model.addAttribute("songIds", songIds);
         return "/song/list-song";
+    }
+
+    @GetMapping("/SearchSuggestions")
+    @ResponseBody
+    public List<String> searchSuggestions(String query) {
+        return songService.SearchSuggestions(query);
     }
 
 
